--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "@tensorflow/tfjs": "^3.17.0"
   }
 }
